# smello

./: .gitignore  .pre-commit-config.yaml  .prettierrc.json  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  SECURITY.md  justfile  mkdocs.yml  pyproject.toml  skills.sh.json
.github/workflows/: docker.yml  docs.yml  publish-server.yml  publish.yml  tests.yml
clients/python/: .bumpversion.toml  CHANGELOG.md  README.md  pyproject.toml
clients/python/src/smello/: __init__.py  _debug.py  _env.py  capture.py  cli.py  config.py  transport.py  utils.py
clients/python/src/smello/bootstrap/: __init__.py  sitecustomize.py
clients/python/src/smello/integrations/: django.py  fastapi.py
clients/python/src/smello/patches/: PATCHING_GUIDE.md  __init__.py  patch_aiohttp.py  patch_botocore.py  patch_excepthook.py  patch_grpc.py  patch_httpx.py  patch_logging.py  patch_requests.py
clients/python/tests/: conftest.py  test_capture.py  test_cli.py  test_config.py  test_debug.py  test_env.py  test_integration_django.py  test_integration_fastapi.py  test_patch_excepthook.py  test_patch_grpc.py  test_patch_httpx.py  test_patch_logging.py  test_transport.py
docs/: CNAME  ai-skills.md  api.md  changelog.md  configuration.md  getting-started.md  index.md  keyboard-shortcuts.md  tech_debt.md
docs/guides/: debug-aiohttp.md  debug-anthropic.md  debug-boto3.md  debug-django.md  debug-fastapi.md  debug-google-cloud.md  debug-grpc.md  debug-httpx.md  debug-openai.md  debug-requests.md  debug-stripe.md  index.md
docs/overrides/: home.html  main.html
docs/stylesheets/: extra.css
examples/: multi_app_demo.sh
examples/llm/: basic_anthropic.py  llm_agent_sdk.py  llm_anthropic.py  llm_openai.py  llm_openai_agents.py  llm_openrouter.py  llm_pydantic_ai.py
examples/python/: all_in_one.py  async_httpx.py  basic_aiohttp.py  basic_anthropic.py  basic_boto3.py  basic_grpc.py  basic_httpx.py  basic_requests.py  demo_httpbin.py  django_server.py  fastapi_server.py  grpcbin_pb2.py  grpcbin_pb2_grpc.py  wrapper_demo.py
frontend/: eslint.config.js  index.html  openapi.json  orval.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/annotations/: README.md  (+6 more)
includes/: guide-next-steps.md
scripts/: README.md  claude-code-mockup.mjs  demo-mockup.mjs  mockup.mjs  package-lock.json  package.json
scripts/lib/: claude-code-template.mjs  colors.mjs  template.mjs
server/: .bumpversion.toml  CHANGELOG.md  README.md  pyproject.toml
server/src/smello_server/: __init__.py  __main__.py  app.py  models.py  types.py
server/src/smello_server/routes/: api.py  web.py
server/src/smello_server/services/: __init__.py  capture.py  events.py
server/src/smello_server/static/: style.css
server/src/smello_server/templates/: base.html  request_detail.html  request_list.html
server/src/smello_server/templates/partials/: request_detail_partial.html  request_list_items.html
server/tests/: conftest.py  test_api.py  test_app.py  test_services_capture.py  test_services_events.py  test_web.py
skills/http-debugger/: SKILL.md
skills/setup-smello/: SKILL.md
skills/smello/: SKILL.md
skills/smello-debugger/: SKILL.md
skills/smello-setup/: SKILL.md
tests/test_e2e/: test_full_flow.py
(+77 files in other folders)
