[project]
name = "smello-workspace"
version = "0.1.0"
description = "Smello monorepo workspace"
requires-python = ">=3.10"
dependencies = ["smello", "smello-server"]

[tool.uv.workspace]
members = ["server", "clients/python"]

[tool.uv.sources]
smello = { workspace = true }
smello-server = { workspace = true }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ty>=0.0.1a5",
    "pre-commit>=4.2.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "requests>=2.32.5",
    "bump-my-version>=1.2.7",
    "zensical>=0.0.23",
]

[tool.ruff]
lint.select = ["E4", "E7", "E9", "F", "UP", "I"]

[tool.ruff.lint.per-file-ignores]
"examples/**" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["clients/python/tests", "server/tests", "tests"]

[tool.ty.environment]
python-version = "3.14"
