[project]
name = "smello"
version = "0.2.0"
description = "Capture outgoing HTTP requests and inspect them in a local web dashboard"
license = "MIT"
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "Roman Imankulov", email = "roman.imankulov@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/smelloscope/smello"
Repository = "https://github.com/smelloscope/smello"
Issues = "https://github.com/smelloscope/smello/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smello"]
